[package]
name = "v040_memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.5.0"
dot = "0.1.4"
structopt = "0.3"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
